<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scenario2"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/select_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pagetitle"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="7dp"
        android:textSize="18dp"
        android:text="@string/destination"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/gradient_spinner"
        android:layout_below="@+id/select_msg" />

    <TextView
        android:id="@+id/transport_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/transportmode"
        android:layout_below="@+id/spinner"/>

    <TextView
        android:id="@+id/mode_car"
        android:layout_below="@+id/transport_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:textSize="18dp"
        android:text="@string/car"/>

    <TextView
        android:id="@+id/mode_train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mode_car"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"
        android:textSize="18dp"
        android:text="@string/train"/>

    <Button
        android:id="@+id/navigatebtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/navigate"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:foregroundGravity="center"/>

</RelativeLayout>
